second commit of a simple html test file

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -1,14 +1,14 @@
-<html> 
+<html>
 
-<head>
+<head> 
 
-      <title>A starter test page for CEGEG077</title>
+        <title>A starter page for CEGE077</title>
 
 </head>
 
-<body> 
+<body>
 
-Hello World - my name is Lammy 
+Hello World - my name is Lammy Ogboye
 
 </body>
 
